VRCSubs: Let language be configurable

--- a/VRCSubs/Config.yml
+++ b/VRCSubs/Config.yml
@@ -1,2 +1,5 @@
 # Set this to true in order to pause the subtitling when your in-game microphone is muted
 FollowMicMute: false
+
+# Change this to your language if you don't want to speak english
+CapturedLanguage: "en-US"
