--- a/VRCNowPlaying/Config.yml
+++ b/VRCNowPlaying/Config.yml
@@ -1,5 +1,5 @@
 # Configure what is shown while you're listening to a song. Use {song_artist}, {song_title}, and {song_position} as placeholders.
-DisplayFormat: "( NP: {song_artist} - {song_title}{song_position} )"
+DisplayFormat: "( ▶️ {song_artist} - {song_title}{song_position} )"
 
 # Configure what is shown when you pause media.
-PausedFormat: "( Playback Paused )"
+PausedFormat: "( ⏸️ Playback Paused )"
