Requirements: Switch to my fork of sr and add vosk
My fork of SpeechRecognition has some fixes that aren't yet in mainline.

--- a/VRCSubs/Requirements.txt
+++ b/VRCSubs/Requirements.txt
@@ -1,6 +1,7 @@
 pyaudio
-SpeechRecognition==3.8.1
+https://github.com/cyberkitsune/speech_recognition/archive/refs/heads/vrcsubs-edits.zip
 python-osc
 pyyaml
 googletrans==4.0.0rc1
 deepl
+vosk
