VRCSubs: Add note about vosk models to readme

--- a/VRCSubs/Config.yml
+++ b/VRCSubs/Config.yml
@@ -13,6 +13,7 @@ CapturedLanguage: "en-US"
 # For speech to text, what engine should be used? The options are:
 # "Google" - The default, fairly accurate, but uses the Google API to transcribe, so it may take some time, and may be blocked in some places.
 # "Vosk"   - An offline open-source option. Less accurate, and requires a model to be downloaded. However, it may be faster and work regardless of location.
+#            You can download vosk models here: https://alphacephei.com/vosk/models
 TranscriptionMethod: "Google"
 
 # If you wish your chat to be translated (very beta feature!) set this to true.
