--- a/VRCSubs/Config.yml
+++ b/VRCSubs/Config.yml
@@ -16,6 +16,9 @@ CapturedLanguage: "en-US"
 #            You can download vosk models here: https://alphacephei.com/vosk/models
 TranscriptionMethod: "Google"
 
+# Rate limit for the transcriber between chat boxes (in ms) -- For example "1500" will wait to ensure a message isn't sent again within 1.5 seconds.
+TranscriptionRateLimit: 1200
+
 # If you wish your chat to be translated (very beta feature!) set this to true.
 EnableTranslation: false
 
