VRCNowPlaying: Explain in the config file better

--- a/VRCNowPlaying/Config.yml
+++ b/VRCNowPlaying/Config.yml
@@ -13,7 +13,13 @@ OnlyShowOnChange: false
 # Set this to true to use the textfile feature
 UseTextFile: false
 
-# Set this to the path on your computer that you wish to watch. PLEASE USE DOUBLE BACKSLASHES (or single forward slashes) OR THIS WILL FAIL!!!
+# Set this to the path on your computer that you wish to watch. 
+# PLEASE USE DOUBLE BACKSLASHES (or single forward slashes) OR THIS WILL FAIL!!!
+#
+# Example:
+#       ❌ "C:\Users\Example\np.txt" (BAD)
+#       ✅ "C:\\Users\\Example\\np.txt" (GOOD)
+#       ✅ "C:/Users/Example/np.txt" (Also ok)
 TextFileLocation: "C:\\Users\\Example\\Now_Playing.txt"
 
 # By default, if the text file does not change, VRCNowPlaying won't display it. 
